Bug 476504 - handle errors in fetching font metrics. r=vlad