gfx/thebes/src/gfxAtsuiFonts.cpp
@@ -95,7 +95,8 @@ gfxAtsuiFont::gfxAtsuiFont(MacOSFontEntry *aFontEntry,
                            const gfxFontStyle *fontStyle, PRBool aNeedsBold)
     : gfxFont(aFontEntry, fontStyle),
       mFontStyle(fontStyle), mATSUStyle(nsnull),
-      mHasMirroring(PR_FALSE), mHasMirroringLookedUp(PR_FALSE), mAdjustedSize(0.0f)
+      mHasMirroring(PR_FALSE), mHasMirroringLookedUp(PR_FALSE),
+      mFontFace(nsnull), mScaledFont(nsnull), mAdjustedSize(0.0f)
 {
     ATSUFontID fontID = aFontEntry->GetFontID();
     ATSFontRef fontRef = FMGetATSFontRefFromFont(fontID);
@@ -116,6 +117,9 @@ gfxAtsuiFont::gfxAtsuiFont(MacOSFontEntry *aFontEntry,
     }
 
     InitMetrics(fontID, fontRef);
+    if (!mIsValid) {
+        return;
+    }
 
     mFontFace = cairo_quartz_font_face_create_for_atsu_font_id(fontID);
 
@@ -266,8 +270,21 @@ gfxAtsuiFont::InitMetrics(ATSUFontID aFontID, ATSFontRef aFontRef)
     /* Now pull out the metrics */
 
     ATSFontMetrics atsMetrics;
-    ATSFontGetHorizontalMetrics(aFontRef, kATSOptionFlagsDefault,
+    OSStatus err;
+    
+    err = ATSFontGetHorizontalMetrics(aFontRef, kATSOptionFlagsDefault,
                                 &atsMetrics);
+                                
+    if (err != noErr) {
+        mIsValid = PR_FALSE;
+        
+#ifdef DEBUG        
+        char warnBuf[1024];
+        sprintf(warnBuf, "Bad font metrics for: %s err: %8.8x", NS_ConvertUTF16toUTF8(GetName()).get(), PRUint32(err));
+        NS_WARNING(warnBuf);
+#endif
+        return;
+    }
 
     if (atsMetrics.xHeight)
         mMetrics.xHeight = atsMetrics.xHeight * size;
@@ -421,10 +438,13 @@ gfxAtsuiFont::GetCharHeight(PRUnichar c)
 
 gfxAtsuiFont::~gfxAtsuiFont()
 {
-    cairo_scaled_font_destroy(mScaledFont);
-    cairo_font_face_destroy(mFontFace);
+    if (mScaledFont)
+        cairo_scaled_font_destroy(mScaledFont);
+    if (mFontFace)
+        cairo_font_face_destroy(mFontFace);
 
-    ATSUDisposeStyle(mATSUStyle);
+    if (mATSUStyle)
+        ATSUDisposeStyle(mATSUStyle);
 }
 
 const gfxFont::Metrics&
